--- a/style.css
+++ b/style.css
@@ -36,3 +36,8 @@ body {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
+    margin-left: 170px;
+}
